@@ -455,7 +455,7 @@ sub addCPU {
 
   my $content = {};
 
-  foreach my $key (qw/CPUARCH CORES HPT L2CACHESIZE MANUFACTURER SERIALNUMBER SOCKET SPEED TYPE VOLTAGE/) {
+  foreach my $key (qw/CORES CPUARCH CPUSTATUS CURRENT_SPEED DATA_WIDTH HPT L2CACHESIZE MANUFACTURER SERIALNUMBER SOCKET SPEED TYPE VOLTAGE/) {
      if (exists $args->{$key}) {
         $content->{$key}[0] = $args->{$key} if $args->{$key};
      }
