@@ -1,5 +1,7 @@
 Revision history for Ocsinventory::Agent
 
+       * Retrieve new values for CPU
+       * Update memconf command to latest version
        * Fix bugs with usb in Lsusb.pm and Common.pm
        * Add retrieve usb connected devices
        * Fix Bug #1198088 wrong data for processors under 2.1 RC1
